--- a/src/layout.pug
+++ b/src/layout.pug
@@ -10,9 +10,10 @@ html
     meta(name="author", content="IOOS")
 
     link(href="https://fonts.googleapis.com/css?family=Roboto", rel="stylesheet", type="text/css")
-    link(rel="stylesheet",href="tachyons.css")
+    link(rel="stylesheet",href="bootstrap.css")
     link(rel="stylesheet",href="atnstyle.css")
   body
     include ioos-header
     block content
     script(src="app.bundle.js")
+
