--- a/css/atn.css
+++ b/css/atn.css
@@ -5,3 +5,58 @@
 .fg-ioos {
     color: #56cded !important;
 }
+
+.splash {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    position: absolute;
+    height: 15vw;
+    width: 100%;
+}
+
+.hilight-back {
+    background-color: #ccc;
+}
+
+.dib {
+    display: inline-block;
+}
+
+.atn-nav-box {
+    width: 100%;
+    height: 200px;
+    border: 4px solid rgb(34,48,56);
+}
+
+.atn-nav-label {
+    bottom: 10px;
+    right: 10px;
+    background-color: white;
+    text-transform: capitalize;
+}
+
+.relative {
+    position: relative;
+}
+
+.absolute {
+    position: absolute;
+}
+
+.bg-atn-1 {
+    background-color: rgb(151, 142, 117);
+}
+
+.bg-atn-2 {
+    background-color: rgb(85,92,90);
+}
+
+.bg-atn-3 {
+    background-color: rgb(91,133,159);
+}
+
+
+
+
+
