--- a/css/atn.css
+++ b/css/atn.css
@@ -16,24 +16,39 @@
 }
 
 .hilight-back {
-    background-color: #ccc;
+    background-color: #5b859f;
 }
 
 .dib {
     display: inline-block;
 }
 
+.db {
+    display: block;
+}
+
 .atn-nav-box {
     width: 100%;
     height: 200px;
-    border: 4px solid rgb(34,48,56);
+    border: 3px solid #0b424f;
+}
+
+.atn-nav-box:hover {
+    border-color: #5b859f;
+}
+
+.atn-nav-box:hover .atn-nav-label {
+    background-color: #5b859f;
+    color: white;
 }
 
 .atn-nav-label {
     bottom: 10px;
     right: 10px;
     background-color: white;
-    text-transform: capitalize;
+    text-transform: uppercase;
+
+    color: #0f414c;
 }
 
 .relative {
@@ -45,15 +60,24 @@
 }
 
 .bg-atn-1 {
-    background-color: rgb(151, 142, 117);
+    background: linear-gradient(rgba(51, 91, 138, 0.66), rgba(51, 91, 138, 0.66)),
+        url('/images/atn-nav-bg-1.png');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .bg-atn-2 {
-    background-color: rgb(85,92,90);
+    background: linear-gradient(rgba(21, 66, 72, 0.66), rgba(21, 66, 72, 0.66)),
+        url('/images/atn-nav-bg-2.png');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .bg-atn-3 {
-    background-color: rgb(91,133,159);
+    background: linear-gradient(rgba(166, 184, 190, 0.8), rgba(166, 184, 190, 0.8)),
+        url('/images/atn-nav-bg-3.png');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 
