Use bootstrap utilities for display props

--- a/src/index.pug
+++ b/src/index.pug
@@ -5,17 +5,17 @@ block content
   .container
     .row(style={'padding-top': '8vw'})
       .col-md-12
-        h1.hilight-back.text-white.dib.p-1.mb-2 Animal Tracking Network
+        h1.hilight-back.text-white.d-inline-block.p-1.mb-2 Animal Tracking Network
 
     .row
       .col-md-6
-        a.db.atn-nav-box.relative.bg-atn-1(href="/map")
+        a.d-block.atn-nav-box.relative.bg-atn-1(href="/map")
           .atn-nav-label.absolute.px-1 ⛯ Map
       .col-md-3
-        a.db.atn-nav-box.relative.bg-atn-2(href="/data")
+        a.d-block.atn-nav-box.relative.bg-atn-2(href="/data")
           .atn-nav-label.absolute.px-1 ☵ Data
       .col-md-3
-        a.db.atn-nav-box.relative.bg-atn-3(href="/help")
+        a.d-block.atn-nav-box.relative.bg-atn-3(href="/help")
           .atn-nav-label.absolute.px-1 🛈 Help
 
     .row
