Use scss, improve media queries

--- a/src/ioos-header.pug
+++ b/src/ioos-header.pug
@@ -1,7 +1,7 @@
 header
   .container-fluid(style={'text-align': 'center'})
     a(href="//ioos.us")
-      img.m-2(src="/images/IOOS_Emblem_Tertiary_B_RGB.png",style={width: '480px'})
+      img.m-2.ioos-banner(src="/images/IOOS_Emblem_Tertiary_B_RGB.png")
   nav.navbar.navbar-expand-md.navbar-dark.bg-ioos
     .container
       a.navbar-brand.mr-5(href="//ioos.us")
