--- a/src/layout.pug
+++ b/src/layout.pug
@@ -10,9 +10,9 @@ html
     meta(name="author", content="IOOS")
 
     link(href="https://fonts.googleapis.com/css?family=Roboto", rel="stylesheet", type="text/css")
-    link(rel="stylesheet",href="bootstrap.css")
-    link(rel="stylesheet",href="atnstyle.css")
+    script(src="atnstyle.bundle.js")
   body
+
     include ioos-header
     block content
     script(src="app.bundle.js")
