--- a/css/atn.scss
+++ b/css/atn.scss
@@ -1,3 +1,5 @@
+@import "~bootstrap/scss/bootstrap";
+
 .bg-ioos {
     background-color: #0b3284;
 }
@@ -11,17 +13,16 @@
     background-repeat: no-repeat;
     background-position: 50%;
     position: absolute;
-    height: 15vw;
+    height: 75px;
     width: 100%;
 }
 
-.hilight-back {
-    background-color: #5b859f;
+.offset-splash {
+  padding-top: 50px; 
 }
 
 .atn-nav-box {
-    width: 100%;
-    height: 200px;
+    height: 75px;
     border: 3px solid #0b424f;
 }
 
@@ -41,6 +42,62 @@
     text-transform: uppercase;
 
     color: #0f414c;
+}
+
+.ioos-banner {
+  height: 35px;
+}
+
+@include media-breakpoint-down(xs) {
+  .atn-nav-box {
+    margin-bottom: 5px;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  .splash {
+    height: 200px;
+  }
+  .offset-splash {
+    padding-top: 100px; 
+  }
+  .atn-nav-box {
+    height: 118px;
+  }
+  .ioos-banner {
+    height: 45px;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  .splash {
+    height: 300px;
+  }
+  .offset-splash {
+    padding-top: 190px;
+  }
+  .atn-nav-box {
+    height: 165px;
+  }
+  .ioos-banner {
+    height: 55px;
+  }
+}
+
+@include media-breakpoint-up(xl) {
+  .splash {
+    height: 350px;
+  }
+  .offset-splash {
+    padding-top: 240px;
+  }
+  .atn-nav-box {
+    height: 200px;
+  }
+}
+
+.hilight-back {
+    background-color: #5b859f;
 }
 
 .relative {
