--- a/src/index.pug
+++ b/src/index.pug
@@ -3,18 +3,18 @@ extends layout
 block content
   .splash(style={'background-image': 'url("/images/bg.png")'})
   .container
-    .row(style={'padding-top': '8vw'})
+    .row.offset-splash
       .col-md-12
         h1.hilight-back.text-white.d-inline-block.p-1.mb-2 Animal Tracking Network
 
     .row
-      .col-md-6
+      .col-md-6.col-sm-4
         a.d-block.atn-nav-box.relative.bg-atn-1(href="/map")
           .atn-nav-label.absolute.px-1 ⛯ Map
-      .col-md-3
+      .col-md-3.col-sm-4
         a.d-block.atn-nav-box.relative.bg-atn-2(href="/data")
           .atn-nav-label.absolute.px-1 ☵ Data
-      .col-md-3
+      .col-md-3.col-sm-4
         a.d-block.atn-nav-box.relative.bg-atn-3(href="/help")
           .atn-nav-label.absolute.px-1 🛈 Help
 
