Responsive fixes for ioos nav bar

--- a/src/ioos-header.pug
+++ b/src/ioos-header.pug
@@ -2,7 +2,7 @@ header
   .container-fluid(style={'text-align': 'center'})
     a(href="//ioos.us")
       img.m-2.ioos-banner(src="/images/IOOS_Emblem_Tertiary_B_RGB.png")
-  nav.navbar.navbar-expand-md.navbar-dark.bg-ioos
+  nav.navbar.navbar-expand-lg.navbar-dark.bg-ioos
     .container
       a.navbar-brand.mr-5(href="//ioos.us")
         img(alt="IOOS logo", src="/images/logo-navbar.png", style={'max-height': '42px'})
@@ -10,7 +10,7 @@ header
         span.navbar-toggler-icon
 
       #navbar-content.collapse.navbar-collapse
-        ul.navbar-nav.mr-auto
+        ul.navbar-nav.ml-auto
           li.nav-item.dropdown.mr-4
             a#nav-drop-data.nav-link.dropdown-toggle.fg-ioos(href="#", data-toggle="dropdown", role="button",  aria-haspopup="true", aria-expanded="false")
               | Data
