--- a/css/atn.scss
+++ b/css/atn.scss
@@ -48,6 +48,11 @@
   height: 35px;
 }
 
+.nav-link {
+  text-transform: uppercase;
+  font-size: 18px;
+}
+
 @include media-breakpoint-down(xs) {
   .atn-nav-box {
     margin-bottom: 5px;
