--- a/css/atn.scss
+++ b/css/atn.scss
@@ -53,6 +53,25 @@
   font-size: 18px;
 }
 
+html,body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.wrapper {
+  flex: 1 0 auto;
+}
+
+.page-footer {
+  min-height: 145px;
+  flex-shrink: 0;
+  border-top: 4px solid #154248;
+}
+
 @include media-breakpoint-down(xs) {
   .atn-nav-box {
     margin-bottom: 5px;
