--- a/src/layout.pug
+++ b/src/layout.pug
@@ -13,7 +13,27 @@ html
     script(src="atnstyle.bundle.js")
   body
 
-    include ioos-header
-    block content
-    script(src="app.bundle.js")
+    .wrapper
+      include ioos-header
+      block content
+      script(src="app.bundle.js")
+
+    footer.hilight-back.text-white.page-footer.mt-3.pt-2
+      .container
+        .row
+          .col-sm-8
+          .col-sm-4
+            div(itemscope, itemtype="http://schema.org/GovernmentOrganization")
+              p(itemprop="name") U.S. Integrated Ocean Observing System
+              address(itemprop="address")
+                .
+                  1315 East-West Highway
+                br
+                .
+                  SSMC3, 2nd Floor
+                br
+                . 
+                  Silver Spring, MD 20910
+              p(itemprop="telephone")
+                a.text-white(href="tel:240-533-9444") (240)-533-9444
 
