--- a/css/atn.scss
+++ b/css/atn.scss
@@ -48,9 +48,17 @@
   height: 35px;
 }
 
+.navbar {
+  font-family: 'roboto';
+}
+
 .nav-link {
   text-transform: uppercase;
   font-size: 18px;
+}
+
+.atn-title {
+  font-size: 2em;
 }
 
 html,body {
