Fixup responsiveness in titles/bars, hide ioos top banner on mobile

--- a/src/ioos-header.pug
+++ b/src/ioos-header.pug
@@ -1,5 +1,5 @@
 header
-  .container-fluid(style={'text-align': 'center'})
+  .container-fluid.d-none.d-sm-block(style={'text-align': 'center'})
     a(href="//ioos.us")
       img.m-2.ioos-banner(src="/images/IOOS_Emblem_Tertiary_B_RGB.png")
   nav.navbar.navbar-expand-lg.navbar-dark.bg-ioos
