Roboto on landing page

--- a/src/index.pug
+++ b/src/index.pug
@@ -5,7 +5,7 @@ block content
   .container
     .row.offset-splash
       .col-md-12
-        h1.hilight-back.text-white.d-inline-block.p-1.mb-2 Animal Tracking Network
+        h1.hilight-back.text-white.d-inline-block.p-1.mb-2.atn-title Animal Tracking Network
 
     .row
       .col-md-6.col-sm-4
