--- a/css/atn.scss
+++ b/css/atn.scss
@@ -36,12 +36,13 @@
 }
 
 .atn-nav-label {
-    bottom: 10px;
-    right: 10px;
-    background-color: white;
-    text-transform: uppercase;
+  bottom: 10px;
+  right: 10px;
+  background-color: white;
+  text-transform: uppercase;
+  font-family: 'roboto';
 
-    color: #0f414c;
+  color: #0f414c;
 }
 
 .ioos-banner {
@@ -58,6 +59,7 @@
 }
 
 .atn-title {
+  font-family: 'roboto';
 }
 
 html,body {
