Fix ioos header links

--- a/src/ioos-header.pug
+++ b/src/ioos-header.pug
@@ -17,22 +17,22 @@ header
             .dropdown-menu(aria-labelledby="nav-drop-data")
               a.dropdown-item(href="//ioos.noaa.gov/about/ioos-by-the-numbers/") Metrics
               a.dropdown-item(href="//data.ioos.us") Search
-              a.dropdown-item(href="//data.ioos.us/compliance", target="_blank") Compliance Checker
+              a.dropdown-item(href="//compliance.ioos.us", target="_blank") Compliance Checker
 
           li.nav-item.dropdown.mr-4
             a#nav-drop-viewers.nav-link.dropdown-toggle.fg-ioos(href="#", data-toggle="dropdown", role="button",  aria-haspopup="true", aria-expanded="false")
               | Viewers
             .dropdown-menu(aria-labelledby="nav-drop-viewers")
               a.dropdown-item(href="https://oceansmap.com/comt/", target="_blank") COMT
-              a.dropdown-item(href="http://axiomdatascience.com/maps/ioos", target="_blank") Sensor Map
+              a.dropdown-item(href="https://sensors.ioos.us", target="_blank") Sensor Map
               a.dropdown-item(href="//eds.ioos.us", target="_blank") EDS Viewer
           li.nav-item.dropdown.mr-4
             a#nav-drop-dacs.nav-link.dropdown-toggle.fg-ioos(href="#", data-toggle="dropdown", role="button",  aria-haspopup="true", aria-expanded="false")
               | DACs
             .dropdown-menu(aria-labelledby="nav-drop-dacs")
               a.dropdown-item(href="//gliders.ioos.us/data/", target="_blank") Glider DAC
-              a.dropdown-item(href="#") HF Radar DAC
-              a.dropdown-item(href="http://oceanview.pfeg.noaa.gov/ATN/", target="_blank") ATN DAC
+              a.dropdown-item(href="//hfradar.ioos.us") HF Radar DAC
+              a.dropdown-item(href="//atn.ioos.us", target="_blank") ATN DAC
           li.nav-item.dropdown.mr-4
             a#nac-drop-ras.nav-link.dropdown-toggle.fg-ioos(href="#", data-toggle="dropdown", role="button", aria-haspopup="true", aria-expanded="false")
               | Regional Associations
