--- a/src/subnav.pug
+++ b/src/subnav.pug
@@ -1,4 +1,4 @@
-nav.navbar.navbar-light.hilight-back.navbar-expand-md.atn-nav-bar.py-1
+nav.navbar.navbar-dark.hilight-back.navbar-expand-md.atn-nav-bar.py-1
   .container
     a.navbar-brand.text-white(href="/") Animal Tracking Network
 
