Redirect /help to ioos.github.io/atn-docs for now

--- a/src/help/index.pug
+++ b/src/help/index.pug
@@ -1,20 +1,3 @@
-extends ../layout
+head
+  meta(http-equiv="refresh", content="0;URL='//ioos.github.io/atn-docs/'")
 
-block subnav
-  - var current = "help";
-  include ../subnav
-
-block content
-  .container.mt-3
-    .row
-      .col-sm-12
-        h1 Help
-
-        dl
-          dt Question 1
-          dd
-            | Answer 1
-
-          dt Question 2
-          dd
-            | Answer 2
