--- a/src/index.pug
+++ b/src/index.pug
@@ -15,7 +15,7 @@ block content
         a.d-block.atn-nav-box.relative.bg-atn-2(href="/data")
           .atn-nav-label.absolute.px-1 ☵ Data
       .col-md-3.col-sm-4
-        a.d-block.atn-nav-box.relative.bg-atn-3(href="/help")
+        a.d-block.atn-nav-box.relative.bg-atn-3(href="//ioos.github.io/atn-docs/", target="_blank")
           .atn-nav-label.absolute.px-1 🛈 Help
 
     .row
