--- a/src/subnav.pug
+++ b/src/subnav.pug
@@ -1,6 +1,6 @@
 nav.navbar.navbar-dark.hilight-back.navbar-expand-md.atn-nav-bar.py-1
   .container
-    a.navbar-brand.text-white(href="/") Animal Tracking Network
+    a.navbar-brand.text-white(href="/") Animal Telemetry Network
 
     button.navbar-toggler(type="button", data-toggle="collapse", data-target="#atn-navbar-content", aria-expanded="false", aria-label="Toggle nav")
       span.navbar-toggler-icon
