Add Dockerfile, about redirect route

--- a/src/index.pug
+++ b/src/index.pug
@@ -9,10 +9,10 @@ block content
 
     .row
       .col-md-6.col-sm-4
-        a.d-block.atn-nav-box.relative.bg-atn-1(href="/map")
+        a.d-block.atn-nav-box.relative.bg-atn-1(href="/map/")
           .atn-nav-label.absolute.px-1 ⛯ Map
       .col-md-3.col-sm-4
-        a.d-block.atn-nav-box.relative.bg-atn-2(href="/data")
+        a.d-block.atn-nav-box.relative.bg-atn-2(href="/data/")
           .atn-nav-label.absolute.px-1 ☵ Data
       .col-md-3.col-sm-4
         a.d-block.atn-nav-box.relative.bg-atn-3(href="//ioos.github.io/atn-docs/", target="_blank")
