--- a/src/layout.pug
+++ b/src/layout.pug
@@ -10,14 +10,14 @@ html
     meta(name="author", content="IOOS")
 
     link(href="https://fonts.googleapis.com/css?family=Roboto", rel="stylesheet", type="text/css")
-    script(src="atnstyle.bundle.js")
+    script(src="/atnstyle.bundle.js")
   body
 
     .wrapper
       include ioos-header
       block subnav
       block content
-      script(src="app.bundle.js")
+      script(src="/app.bundle.js")
 
     footer.hilight-back.text-white.page-footer.mt-3.pt-2
       .container
