--- a/src/subnav.pug
+++ b/src/subnav.pug
@@ -8,9 +8,9 @@ nav.navbar.navbar-dark.hilight-back.navbar-expand-md.atn-nav-bar.py-1
     #atn-navbar-content.collapse.navbar-collapse
       ul.navbar-nav.ml-auto
         li.nav-item.mr-4(class={active: current === 'map'})
-          a.nav-link(href="/map") ⛯ Map
+          a.nav-link(href="/map/") ⛯ Map
         li.nav-item.mr-4(class={active: current === 'data'})
-          a.nav-link(href="/data") ☵ Data
+          a.nav-link(href="/data/") ☵ Data
         li.nav-item(class={active: current === 'help'})
           a.nav-link(href="//ioos.github.io/atn-docs/", target="_blank") 🛈 Help
 
