Update URL for map

--- a/src/map/index.pug
+++ b/src/map/index.pug
@@ -6,5 +6,5 @@ block subnav
 
 block content
   .embed-responsive.embed-responsive-16by9
-    iframe.embed-responsive-item(src="//atn.axds.co/map")
+    iframe.embed-responsive-item(src="//atn.ioos.us/map")
 
