Adding provider logos

--- a/src/index.pug
+++ b/src/index.pug
@@ -22,3 +22,15 @@ block content
       .col-md-12
         p.mt-3 The ATN data management vision includes a regionally distributed data collection, management and sharing capacity that builds on and integrates as many existing data links as possible to enable local and regional needs to be addressed. At the heart of this system is a centralized data assembly center (DAC) currently located at the Stanford U. Hopkins Marine Station. This DAC is a community resource where regional telemetry data is aggregated in a single place and one-stop-shopping is provided for access to all U.S. national animal telemetry data. The DAC both serves national stakeholder needs effectively as well as enables cost/time savings to principal investigators.
 
+    .row
+      .col-lg-2.col-md-2.col-6
+        img.img-fluid(src="/images/atn-provider-logos-onr.png", alt="ONR Logo")
+      .col-lg-2.col-md-2.col-6
+        img.img-fluid(src="/images/atn-provider-logos-boem.png", alt="BOEM Logo")
+      .col-lg-2.col-md-2.col-6
+        img.img-fluid(src="/images/atn-provider-logos-noaa.png", alt="NOAA Logo")
+      .col-lg-2.col-md-2.col-6
+        img.img-fluid(src="/images/atn-provider-logos-mmc.png", alt="MMC Logo")
+      .col-lg-2.col-md-2.col-6
+        img.img-fluid(src="/images/atn-provider-logos-ioos.png", alt="IOOS Logo")
+
