--- a/src/layout.pug
+++ b/src/layout.pug
@@ -2,7 +2,8 @@ doctype html
 html
   head
     meta(charset="UTF-8")
-    title IOOS Animal Telemetry Network
+    block title
+      title IOOS Animal Telemetry Network
     //link(rel="shortcut icon", href="/images/favicon.ico?v=2")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1")
