--- a/src/layout.pug
+++ b/src/layout.pug
@@ -20,7 +20,7 @@ html
       block content
       script(src="/app.bundle.js")
 
-    footer.hilight-back.text-white.page-footer.mt-3.pt-2
+    footer.bg-primary.text-white.page-footer.mt-3.pt-2
       .container
         .row
           .col-sm-8
