--- a/src/index.pug
+++ b/src/index.pug
@@ -5,7 +5,7 @@ block content
   .container
     .row.offset-splash
       .col-md-12
-        h1.hilight-back.text-white.d-inline-block.p-1.mb-2.atn-title Animal Telemetry Network
+        h1.bg-primary.text-white.d-inline-block.p-1.mb-2.atn-title Animal Telemetry Network
 
     .row
       .col-md-6.col-sm-4
@@ -15,7 +15,7 @@ block content
         a.d-block.atn-nav-box.relative.bg-atn-2(href="/data/")
           .atn-nav-label.absolute.px-1 ☵ Data
       .col-md-3.col-sm-4
-        a.d-block.atn-nav-box.relative.bg-atn-3(href="//ioos.github.io/atn-docs/", target="_blank")
+        a.d-block.atn-nav-box.relative.bg-atn-3(href="/help/")
           .atn-nav-label.absolute.px-1 🛈 Help
 
     .row
