--- a/src/subnav.pug
+++ b/src/subnav.pug
@@ -1,4 +1,4 @@
-nav.navbar.navbar-dark.hilight-back.navbar-expand-md.atn-nav-bar.py-1
+nav.navbar.navbar-dark.bg-primary.navbar-expand-md.atn-nav-bar.py-1
   .container
     a.navbar-brand.text-white(href="/") Animal Telemetry Network
 
@@ -12,5 +12,5 @@ nav.navbar.navbar-dark.hilight-back.navbar-expand-md.atn-nav-bar.py-1
         li.nav-item.mr-4(class={active: current === 'data'})
           a.nav-link(href="/data/") ☵ Data
         li.nav-item(class={active: current === 'help'})
-          a.nav-link(href="//ioos.github.io/atn-docs/", target="_blank") 🛈 Help
+          a.nav-link(href="/help/") 🛈 Help
 
