--- a/css/atn.scss
+++ b/css/atn.scss
@@ -226,6 +226,12 @@ body {
     border-bottom: 1px solid var(--primary);
   }
 
+  h3 {
+    margin: 1.0em 0 0.1em 0;
+    font-size: 1.2em;
+    padding-bottom: 0.5em;
+  }
+
   a.headerlink {
     visibility: hidden;
     margin-left: 6px;
