--- a/src/index.pug
+++ b/src/index.pug
@@ -22,9 +22,9 @@ block content
       .col-md-8.justify-text
         p The ATN data management vision includes a regionally distributed data collection, management and sharing capacity that builds on and integrates as many existing data links as possible to enable local and regional needs to be addressed. At the heart of this system is a centralized data assembly center (DAC) currently located at Axiom Data Science. This DAC is a community resource where regional telemetry data is aggregated in a single place and one-stop-shopping is provided for access to all U.S. national animal telemetry data. The DAC both serves national stakeholder needs effectively as well as enables cost/time savings to principal investigators.
 
-      .col-md-4
-        .h2 Quick Links
-        a(href="/help/argos") Covering ARGOS Fees through the ATN
+      //- .col-md-4
+      //-   .h2 Quick Links
+      //-   a(href="/help/argos") Covering ARGOS Fees through the ATN
 
     .row.mt-4
       .col-lg-2.col-md-2.col-6
