Remove /data subset, update nav, portal links

--- a/src/index.pug
+++ b/src/index.pug
@@ -8,13 +8,10 @@ block content
         h1.bg-primary.text-white.d-inline-block.p-1.mb-2.atn-title Animal Telemetry Network
 
     .row
-      .col-md-6.col-sm-4
-        a.d-block.atn-nav-box.relative.bg-atn-1(href="/map/")
+      .col-md-8.col-sm-4
+        a.d-block.atn-nav-box.relative.bg-atn-1(href="//portal.atn.ioos.us/")
           .atn-nav-label.absolute.px-1 ⛯ Map
-      .col-md-3.col-sm-4
-        a.d-block.atn-nav-box.relative.bg-atn-2(href="/data/")
-          .atn-nav-label.absolute.px-1 ☵ Data
-      .col-md-3.col-sm-4
+      .col-md-4.col-sm-4
         a.d-block.atn-nav-box.relative.bg-atn-3(href="/help/")
           .atn-nav-label.absolute.px-1 🛈 Help
 
