--- a/src/subnav.pug
+++ b/src/subnav.pug
@@ -8,7 +8,7 @@ nav.navbar.navbar-dark.bg-primary.navbar-expand-md.atn-nav-bar.py-1
     #atn-navbar-content.collapse.navbar-collapse
       ul.navbar-nav.ml-auto
         li.nav-item.mr-4(class={active: current === 'map'})
-          a.nav-link(href="/map/") ⛯ Map
+          a.nav-link(href="//portal.atn.ioos.us") ⛯ Map
         li.nav-item(class={active: current === 'help'})
           a.nav-link(href="/help/") 🛈 Help
 
