Update map -> data portal

--- a/src/index.pug
+++ b/src/index.pug
@@ -10,7 +10,7 @@ block content
     .row
       .col-md-8.col-sm-4
         a.d-block.atn-nav-box.relative.bg-atn-1(href="//portal.atn.ioos.us/")
-          .atn-nav-label.absolute.px-1 ⛯ Map
+          .atn-nav-label.absolute.px-1 ⛯ Data Portal
       .col-md-4.col-sm-4
         a.d-block.atn-nav-box.relative.bg-atn-3(href="/help/")
           .atn-nav-label.absolute.px-1 🛈 Help
