changed to ioos model viewer

--- a/src/ioos-header.pug
+++ b/src/ioos-header.pug
@@ -25,7 +25,7 @@ header
             .dropdown-menu(aria-labelledby="nav-drop-viewers")
               a.dropdown-item(href="https://oceansmap.com/comt/", target="_blank") COMT
               a.dropdown-item(href="https://sensors.ioos.us", target="_blank") Sensor Map
-              a.dropdown-item(href="//eds.ioos.us", target="_blank") EDS Viewer
+              a.dropdown-item(href="//eds.ioos.us", target="_blank") IOOS Model Viewer
           li.nav-item.dropdown.mr-4
             a#nav-drop-dacs.nav-link.dropdown-toggle.fg-ioos(href="#", data-toggle="dropdown", role="button",  aria-haspopup="true", aria-expanded="false")
               | DACs
